--- a/VSC p5js test/index.html
+++ b/VSC p5js test/index.html
@@ -15,5 +15,7 @@
   <body>
     <script src="sketch.js"></script>
     <script src="bullet.js"></script>
+    <script src="player.js"></script>
+    <script src="movement.js"></script>
   </body>
 </html>
