--- a/VSC p5js test/index.html
+++ b/VSC p5js test/index.html
@@ -17,5 +17,7 @@
     <script src="bullet.js"></script>
     <script src="player.js"></script>
     <script src="movement.js"></script>
+    <script src="plyrPrjctl.js"></script>
+    <script src="shoot.js"></script>
   </body>
 </html>
