--- a/VSC p5js test/index.html
+++ b/VSC p5js test/index.html
@@ -19,5 +19,6 @@
     <script src="movement.js"></script>
     <script src="plyrPrjctl.js"></script>
     <script src="shoot.js"></script>
+    <script src="bossbar.js"></script>
   </body>
 </html>
